--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     color: white;
     font-size: 16pt;
     margin: 2% 1%;
+    margin-left: 0;
 }
 
 nav {
@@ -155,4 +156,15 @@ span {
 
 #saveTaskBtn:hover {
     background-color: #45a049;
+}
+
+footer>p {
+    position: absolute;
+    bottom: 0;
+    margin: 0;
+    padding: 0;
+    display: block;
+    width: 100%;
+    text-align: center;
+    background-color: #424242;
 }
