--- a/style.css
+++ b/style.css
@@ -4,12 +4,22 @@ body {
     font-size: 16pt;
     margin: 2% 1%;
     margin-left: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 nav {
     display: flex;
     justify-content: space-between;
     margin: 0% 5%;
+    /* border-bottom: solid 0.2px gray; */
+}
+
+.navBottomBorder {
+    border-bottom: solid 0.2px gray;
+    /* width: 100%; */
+    margin-left: 2%;
+    margin-right: 1%;
+    padding: 2px;
 }
 
 #inventLogo {
@@ -158,6 +168,8 @@ span {
     background-color: #45a049;
 }
 
+/* Rest of your CSS styles ... */
+
 footer>p {
     position: absolute;
     bottom: 0;
@@ -167,4 +179,11 @@ footer>p {
     width: 100%;
     text-align: center;
     background-color: #424242;
+    color: #fff;
+    /* Text color */
+}
+
+footer>p::before {
+    margin-right: 5px;
+    /* Adjust spacing between the symbol and text */
 }
