--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
     color: white;
     font-size: 16pt;
     margin: 2% 1%;
-    margin-left: 0;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -11,12 +10,10 @@ nav {
     display: flex;
     justify-content: space-between;
     margin: 0% 5%;
-    /* border-bottom: solid 0.2px gray; */
 }
 
 .navBottomBorder {
     border-bottom: solid 0.2px gray;
-    /* width: 100%; */
     margin-left: 2%;
     margin-right: 1%;
     padding: 2px;
@@ -33,12 +30,6 @@ nav {
 
 h2 {
     color: rgb(121, 219, 121);
-
-}
-
-label {
-    font-size: 1.4rem;
-    padding: 0px 10px;
 }
 
 a {
@@ -54,7 +45,6 @@ a:hover {
     transform: scale(1.1);
     color: rgb(121, 219, 121);
 }
-
 
 button {
     font-size: 1rem;
@@ -77,30 +67,34 @@ button:hover {
     margin: 0% 10%;
 }
 
-.leftSide {
-    width: 40%;
-}
-
+.leftSide,
 .rightSide {
     width: 40%;
 }
 
-.taskListItems>li,
-span {
+/* .taskListItems>li,
+.expirationListItems>li,
+.upcomingEvents>ul>li>span,
+.noteEntry>ul>li>span {
+    justify-content: center;
+    flex-direction: row;
     display: inline;
-}
+    justify-content: space-between;
+} */
 
-.taskListItems>span {
-    justify-content: end;
-}
-
-#taskListItemsList>.taskListItems {
-    width: 100%;
-    padding: 8px 0px;
-    margin: 0;
+.taskListItems,
+.expiringItems {
     display: flex;
     justify-content: space-between;
-    transition: transform 0.3s;
+    text-decoration: none;
+    list-style: none;
+    margin: 20px 0px;
+}
+
+
+.taskListItems>span,
+.expirationListItems>span {
+    justify-content: end;
 }
 
 .modal {
@@ -123,7 +117,6 @@ span {
     width: 50%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
-
 }
 
 .close {
@@ -141,7 +134,8 @@ span {
     cursor: pointer;
 }
 
-#taskInput {
+#taskInput,
+#expirationInput {
     width: 80%;
     padding: 10px;
     margin-bottom: 10px;
@@ -152,7 +146,8 @@ span {
     font-size: 16px;
 }
 
-#saveTaskBtn {
+#saveTaskBtn,
+#saveItemBtn {
     background-color: #4CAF50;
     color: white;
     padding: 10px 15px;
@@ -161,11 +156,10 @@ span {
     cursor: pointer;
 }
 
-#saveTaskBtn:hover {
+#saveTaskBtn:hover,
+#saveItemBtn:hover {
     background-color: #45a049;
 }
-
-/* Rest of your CSS styles ... */
 
 footer>p {
     position: absolute;
