--- a/style.css
+++ b/style.css
@@ -73,7 +73,8 @@ button:hover {
 }
 
 .taskListItems,
-.expiringItems {
+.expiringItems,
+.notes {
     display: flex;
     justify-content: space-between;
     text-decoration: none;
@@ -83,7 +84,8 @@ button:hover {
 
 
 .taskListItems>span,
-.expirationListItems>span {
+.expiringItems>span,
+.notes>span {
     justify-content: end;
 }
 
